Review of all Test Classes. Fix of all Test Classes. Now all tests work (54/54). Generalization of InGamePlayerTest and FieldTest. Fix of bug in Game. Fix of awardPoints in GoldCard (it didn't consider the condition: POINTS_CONDITION == NULL).